# markdown-makefile

./: .bazelignore  .bazelrc  .dockerignore  .gitattributes  .gitconfig  .gitignore  .markdownlint.json  BUILD  Cargo.toml  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_deps.bzl  build_defs.bzl  env.sh  markdown-makefile.plugin.env.sh  notes.md  pylintrc  pymarkdown.json  pyproject.toml  requirements.txt  requirements_lock.txt  workspace_git_update  workspace_publications  workspace_summary
.bin/: bindump  workspace_status
.dynamic_group_contents/: contents.bzl  update
.markdown_summary/: BUILD  contents.bzl
.markdown_workspace/: git_repo_version  workspace_status
.workspace_contents/: workspace_contents.bzl
core/: BUILD  base_metadata.py  base_metadata_test.py  bazel_package.py  bazel_package_test.py  build_defs.bzl  cleanup.lua  cleanup_test.py  include_test.py  preprocess.py  preprocess_test.py  raw_version.py  raw_version_test.py  spellcheck.sh  spellcheck_filter.lua  spellcheck_filter_test.py  spellcheck_test.py  starts_with_text_test.py  test_utils.py  validate.py  validate_test.py  wordcount_test.py  workspace_status.py  write_dictionary_test.py  write_metadata_test.py
formats/: BUILD  docx_filter.lua  ebook.bzl  ebook_convert.sh  epub.css  header_template.tex  helpers.bzl  latex.bzl  latex_filter.lua  misc.bzl  ms_docx.sh  ms_docx_filter_test.sh  ms_metadata.py  ms_metadata_test.py  pandoc.sh  template.tex  unoconv.sh  word.bzl  write_open_script_test.py  write_save_script.sh  write_save_script_test.py  zip_cleaner_test.py
lib/: BUILD  bar.md  base_metadata.py  base_metadata_test.py  bazel_package.py  bazel_package_test.py  build_defs.bzl  foo.md  gen_metadata.sh  include.lua  include_test.py  preprocess.py  preprocess_test.py  raw_version.py  raw_version_test.py  raw_version_test.sh  spellcheck.sh  spellcheck_test.py  starts_with_text.lua  starts_with_text_test.py  test_utils.py  validate.lua  validate.py  validate_test.py  versions.sh  workspace_status.py  workspace_status_test.sh  write_dictionary_test.py  write_metadata.lua  write_metadata_test.py  write_open_script_test.py
makefiles/: Makefile.include  default-makefile
markdown/: BUILD  defs.bzl
markdown/private/core/: BUILD  Cargo.toml  defs.bzl  parse_date.py  parse_date_test.py  preprocess.py  preprocess_test.py  raw_version.py  raw_version.rs  raw_version_test.py  source_hash.py  source_hash_test.py  validate_input_metadata.py  validate_input_metadata.rs  validate_input_metadata_test.py  validate_output_metadata.py  validate_output_metadata.rs  validate_output_metadata_test.py  version.py  version_test.py
markdown/private/core/filters/: BUILD  header_auto_ids_test.py  include.lua  include_test.py  paragraph_annotations_test.py  poetry_lines_test.py  validate_ids.lua  validate_ids_test.py  validate_quotes_test.py  wordcount.lua  wordcount_test.py  write_metadata_test.py
markdown/private/core/group/: BUILD  combine_deps_metadata.py  combine_deps_metadata_test.py
markdown/private/core/lint/: BUILD  custom_lint.py  custom_lint_test.py  gen_standard_lint_input_test.py  standard_lint.py  standard_lint.sh
markdown/private/core/spelling/: BUILD  gen_dictionary_test.py  spellcheck.sh  spellcheck_cleanup_test.py  spellcheck_filter.lua  spellcheck_filter_test.py  spellcheck_input_template.md  spellcheck_test.py
mypy_stubs/: BUILD  panflute.pyi
oldbin/: _docdump
readme/: BUILD  basic.build  collection.build  defs.bzl  include.build  module_template.bazel  readme.dic  readme.md  root.build  spelling.build  version.sh
templates/: before.tex  default-gitattributes  default-gitconfig  docx-filter.lua  epub.css  generate-dictionary.sh  generate-metadata-validation-input.sh  generate-metadata.sh  generate-ms-metadata.sh  header.tex  ms-docx-filter.lua  pandoc-include.yaml  spellcheck.sh  starts-with-text.py  template.tex  validate.sh  zip-cleaner.sh
tests/: BUILD  Containerfile  README.md  container_build.sh  container_shell.sh  container_test.sh  diff_test.sh  extra_precommit.sh  foo.md  summary  test.bzl  zip_cleaned_test.sh
tests/other_workspace/: .bazeliskrc  .bazelrc  .gitignore  BUILD  MODULE.bazel  test1.md
tests/other_workspace/.markdown_summary/: contents.bzl  refresh
tests/other_workspace/test2/: BUILD  test2.md
tests/other_workspace/test3/: BUILD  summarise_contents  test3.md
tests/other_workspace/test3/.markdown_summary/: BUILD  contents.bzl
tests/other_workspace/test4/: BUILD  test4.md
tests/other_workspace/tests/test1/: BUILD
tests/other_workspace/tests/test1/saved/: test1.doc  test1.docx  test1.epub  test1.html  test1.metadata.json  test1.mobi  test1.odt  test1.plain.md  test1.shunnmodern.docx  test1.tex  test1.txt
tests/other_workspace/tests/test2/: BUILD  test2.md
tests/other_workspace/tests/test2/saved/: test2.doc  test2.docx  test2.epub  test2.html  test2.md  test2.metadata.json  test2.mobi  test2.odt  test2.plain.md  test2.shunnmodern.docx  test2.tex  test2.tumblr.md
tests/other_workspace/tests/test3/: BUILD  include1.md  include2.md
tests/other_workspace/tests/test3/.markdown_summary/: contents.bzl
tests/other_workspace/tests/test3/saved/: test3.doc  test3.metadata.json  test3.mobi  test3.plain.md  test3.shunnmodern.docx  test3a.doc  test3a.docx  test3a.epub  test3a.html  test3a.mobi  test3a.odt  test3a.tex  test3a.tumblr.md  test3a.txt
tests/other_workspace/tests/test4/: BUILD  test4a.md
tests/other_workspace/tests/test4/saved/: test4.deps_metadata.json  test4.doc  test4.docx  test4.epub  test4.html  test4.md  test4.metadata.json  test4.mobi  test4.odt  test4.plain.md  test4.shunnmodern.docx  test4.tex  test4.tumblr.md
tests/other_workspace/tests/test5/: BUILD  test5.md
tests/other_workspace/tests/test5/saved/: test5.doc  test5.docx  test5.epub  test5.html  test5.mobi  test5.odt  test5.plain.md  test5.shunnmodern.docx  test5.tex
tests/other_workspace/tests/test6/: BUILD  test6.md
tools/: BUILD  calibre.build  calibre.bzl  pandoc.build  pandoc.bzl  prosegrinder_pandoc_templates.build  (+1 more)
utils/: BUILD  bazelrc  (+48 more)
(+610 files in other folders)
