[workspace]
resolver = "2"
members = [
    "markdown/private/core",
    "markdown/private/utils"
]

[workspace.package]
edition = "2021"
rust-version = "1.81.0"

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
markdown = { path = "markdown/private/utils" }
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-json-fmt = "0.1.0"
validator = { version = "0.18.1", features = ["derive"] }
