"""Module definition for rules_markdown."""

module(
    name = "rules_markdown",
    version = "0.17.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_python",
    version = "0.36.0",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "7.3.1",
)
bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

calibre = use_extension("//markdown/private/external:calibre.bzl", "calibre")
use_repo(calibre, "calibre")

pandoc = use_extension("//markdown/private/external:pandoc.bzl", "pandoc")
use_repo(pandoc, "pandoc")

prosegrinder_pandoc_templates = use_extension("//markdown/private/external:prosegrinder_pandoc_templates.bzl", "prosegrinder_pandoc_templates")
use_repo(prosegrinder_pandoc_templates, "prosegrinder_pandoc_templates")

shfmt = use_extension("//markdown/private/external:shfmt.bzl", "shfmt", dev_dependency = True)
use_repo(shfmt, "shfmt")

shellcheck = use_extension("//markdown/private/external:shellcheck.bzl", "shellcheck", dev_dependency = True)
use_repo(shellcheck, "shellcheck")

ruff = use_extension("//markdown/private/external:ruff.bzl", "ruff", dev_dependency = True)
use_repo(ruff, "ruff")

markdown = use_extension("//markdown/extensions:markdown.bzl", "markdown", dev_dependency = True)
use_repo(markdown, "markdown")
