"""Example MODULE.bazel."""

module(
    name = "my_module",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_markdown",
    version = "@@@@@",
)

archive_override(
    module_name = "rules_markdown",
    # Set these from the corresponding tag on github
    urls = "<from github>",
    integrity = "<from github>",
    strip_prefix = "<from github>",
)

markdown = use_extension("@rules_markdown//markdown/extensions:markdown.bzl", "markdown")
use_repo(markdown, "markdown")
