"""Module definition for other_workspace."""

module(
    name = "other_workspace",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_markdown",
    version = "0.17.0",
)
local_path_override(
    module_name = "rules_markdown",
    path = "../..",
)

markdown = use_extension("@rules_markdown//markdown/extensions:markdown.bzl", "markdown")
use_repo(markdown, "markdown")
